--- a/force-app/main/default/layouts/Milestones__c-Milestone Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Milestones__c-Milestone Layout.layout-meta.xml
@@ -13,7 +13,7 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>ProjectId__c</field>
             </layoutItems>
             <layoutItems>
@@ -24,12 +24,12 @@
                 <behavior>Edit</behavior>
                 <field>Status__c</field>
             </layoutItems>
-        </layoutColumns>
-        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>OwnerId</field>
+                <field>testStatus__c</field>
             </layoutItems>
+        </layoutColumns>
+        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>DueDate__c</field>
